update reservation api
